# snooker

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  conanfile.py
conan/profiles/: conf-common  conf-unixlike-common  unixlike-gcc-debug  unixlike-gcc-debug-asan  unixlike-gcc-debug-ccache  unixlike-gcc-debug-coverage  unixlike-gcc-debug-github  unixlike-gcc-debug-tests  unixlike-gcc-release  unixlike-gcc-release-benchmarks  unixlike-gcc-release-ccache  unixlike-gcc-release-github  unixlike-gcc-release-tests
include/snooker/: Ball.hpp  Color.hpp  Physics.hpp  PlayingSurface.hpp  Pocket.hpp  Trajectory.hpp  Utility.hpp  Vertex.hpp
src/: Ball.cpp  CMakeLists.txt  Color.cpp  PlayingSurface.cpp  Pocket.cpp  Snooker.cpp  Trajectory.cpp  Utility.cpp  Vertex.cpp
