AM_CFLAGS = -Wall
bin_PROGRAMS = snooker
snooker_SOURCES = Ball.cpp Ball.hpp Color.cpp Color.hpp Physics.hpp PlayingSurface.cpp PlayingSurface.hpp Pocket.cpp Pocket.hpp Snooker.cpp Trajectory.cpp Trajectory.hpp Utility.cpp utility.hpp Utility.hpp Vertex.cpp Vertex.hpp 
snooker_LDADD = -lglut -lGLU -lGL -lXi -lXmu -lX11 -lm -lpthread -lboost_thread-gcc42-mt-1_36
